dfir_rs/tests/compile-fail/nightly/surface_handoff_multi_out.stderr
error: `handoff` must have exactly 1 output(s), actually has 2.
 --> tests/compile-fail/nightly/surface_handoff_multi_out.rs:6:22
  |
6 |         my_handoff = handoff();
  |                      ^^^^^^^
